# vae_meets_hyperdiffusion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  evaluation_metrics_3d.py  hd_utils.py  hyperdiffusion.py  information.txt  main.py  pyproject.toml  requirements.txt  torchmetrics_fid.py
configs/diffusion_configs/: train_plane.yaml
diffusion/: gaussian_diffusion.py
our_LDM_Autoencoder/: create_mesh_from_ldm_net.py  main.py  train_eval.py
our_LDM_Autoencoder/model/: autoencoder_kl_8x8x64.yaml
our_unet/: create_mesh_from_Unet.py  main.py  train_eval.py
our_unet/model/: openaimodel.py
our_vae/: create_mesh_from_AE.py  create_mesh_from_VAE.py  model_linear.py  test_plot.py  train_eval.py
siren/: dataio.py  loss_functions.py  sdf_meshing.py
siren/experiment_scripts/: train_sdf.py
src/: dataset.py  evaluation_metrics_3d.py  hyperdiffusion.py  main.py  requirements.txt  requirements_temp.txt  sampler.py  torchmetrics_fid.py  transformer.py
src/data/: std_zero_indices_planes.pt
src/diffusion/: nn.py
src/ldm_autoencoder/: calc_metrics.py  calculate_metrics_from_ldm_net.py  create_interpolated_mesh_from_vae.py  create_mesh_from_ldm_net.py  loss.py  main.py  train_eval.py
src/siren/: make_figures.py  sdf_meshing.py  training.py  utils.py
src/unet/: create_mesh_from_unet.py  loss.py  main.py  train_eval.py
src/vae/: annealing.py  loss.py  main.py  (+3 more)
unet/: main.py  train_eval.py
vae/: create_mesh_from_VAE.py  loss.py  main.py  model_transformer_conv.py  model_transformer_linear.py  train_eval.py  utils.py
(+34 files in other folders)
