[tool.poetry]
name = "vae-meets-hyperdiffusion"
version = "0.1.0"
description = ""
authors = ["Julian"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
wandb = "^0.16.0"
trimesh = "^4.0.4"
pyrender = "^0.1.45"
torchmetrics = "^1.2.0"
torch-fidelity = "^0.3.0"
libigl = "^2.4.1"
matplotlib = "^3.8.2"
scikit-video = "^1.1.11"
lightning = "^2.1.2"
plyfile = "^1.0.2"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
